syntax = "proto3";

package com.itrjp.im.proto;
option java_multiple_files = true;

service ConnectService{
  // 推送消息
  rpc push (PushRequest) returns (PushResponse) {}
}

message PushRequest{
  string channelId = 1;
  string content = 2;
}

message PushResponse{
  int32 code = 1;
  string message = 2;
}